# port-manager

./: README.md  index.html  main.js  package-lock.json  package.json  preload.js
dist-html/: index.html
docs/: .bkit-memory.json  .pdca-status.json
scripts/: generate-icon.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
