[package]
name = "port-manager"
version = "2.0.0"
description = "macOS 포트 확인 및 종료 GUI 앱"
authors = ["anminam"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
